Fix spacing issues

--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,9 @@ body {
     grid-auto-flow: row;
     grid-template-rows: repeat(auto-fit, minmax(400px,1fr)); 
     grid-template-columns: repeat(auto-fit, minmax(300px,1fr)); 
-    gap: 1rem;
+    gap: 5rem;
     font-family: "Quintessential";
+    padding: 2rem;
     
 }
 
